--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@fontsource/roboto-condensed": "^5.0.17",
-        "@fortawesome/fontawesome-free": "^6.6.0"
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "axios": "^1.7.7"
     }
 }
