--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "knplabs/knp-time-bundle": "^1.20",
+        "paragonie/sodium_compat": "^1.21",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
@@ -75,7 +76,9 @@
         }
     },
     "require-dev": {
+        "mark-php/mark": "^2.0",
         "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.50",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*"
     }
