--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.19",
         "knplabs/knp-time-bundle": "^1.20",
         "paragonie/sodium_compat": "^1.21",
         "symfony/asset": "6.0.*",
